2006-03-03 Juuso Alasuutari <juuso.alasuutari@tamperelainen.org>
	* init.d/keymap.sh: font & unicode are set on all consoles 
	  listed in /etc/inittab if $TTY_NUMS has "*".
	* init.d/keymap.conf: added comments; info about TTY_NUMS="*" 
	  and notice that TTY_NUMS needs to be set for any font/unicode 
	  changes to take effect

2006-02-27 David Brown <dmlb2000@gmail.com>
        * init.d/mountall.sh: fixed recursive_rm to not fail if nothing is there
        * DETAILS: updated patch level

2006-02-27 Jeremy Blosser <jblosser-smgl@firinn.org>
	* init.d/files/smgl_init: Support a new WANTS variant of NEEDS syntax
	  to allow "soft" dependencies.
	* init.d/mountroot.sh: Split out root fs operations to a new script.
	* init.d/mountall.sh: Reorder some things to make LVM work (bug 9177),
	  depend on the root_fs facility and (optionally, via WANTS) the
	  modules facility to support module-based filesystems (bug 10146),
	  misc style cleanups.
	* init.d/init.d/facilities.conf: Add facilities for root_fs and modules.
	* PREPARE: Added a kludge to make sure mountroot.sh will default to
	  being set as the default provider of root_fs.
	* UP_TRIGGERS: Added with a trigger to make sure module-init-tools is
	  cast when this update happens so the modules facility is provided if
	  necessary.
	* DETAILS: Update VERSION to 2.2.0 so we can try to track proliferation
	  of these changes (and because it's probably about time).
	* WIP: Added, these changes need to be tested on a few dev systems to
	  verify they don't make things unbootable.

2006-02-26 Jeremy Blosser <jblosser-smgl@firinn.org>
	* DETAILS: increment PATCHLEVEL
	* init.d/mountall.sh: s/rek_remove/recursive_rm/

2006-02-25 Jeremy Blosser <jblosser-smgl@firinn.org>
	* init.d/mountall.conf: fix variable name to match the one used in
	  mountall.sh

2006-02-25 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* init.d/mountall.sh: fixes for bug #10509-reopened
	* init.d/mountall.conf: config file
