@@ -1,9 +1,8 @@
 # Sets the proper keymap for the particular keyboard connected to this system.
 KEYMAP=defkeymap
 
-# Enables the Euro sign on the console. (Notice: This setting is only 
-# used by console-tools, not kbd.)
-ENABLE_EURO=no
+# This variable contains include keymaps to be loaded.
+INCLUDEMAPS=
 
 # Below are arguments passed to the consolechars and kbd programs. You 
 # may wish to use this setting to change the console font and charmap 
